adding recyclerView basic UI logic